<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RDS Maps</string>

    <string name="mapbox_access" translatable="false">
        pk.eyJ1IjoiYXJpZmFobWFkYWxmaWFuIiwiYSI6ImNrYmVzc29kajBvbnAycW0yNDl0MTZvMWEifQ.AhBe0NApVwrYE1H4SNnP-A</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="cari">Cari Pelanggan</string>


    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat_dikirim">Alamat Dikirim</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="jam_istirahat">Jam Istirahat</string>
    <string name="alamat_pemesan">Alamat Pemesan</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="kordinat">Kordinat</string>
    <string name="telepon">Telepon</string>
    <string name="selesai">Selesai</string>
    <string name="pt_ronadamar_sejahtera">PT Ronadamar Sejahtera</string>
    <string name="mapbox">Mapbox</string>
    <string name="google_maps">Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_password">Password</string>
    <string name="Login">Login</string>
    <string name="by">by arief ahmad alfian</string>
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="tentang_aplikasi">Aplikasi ini dibuat untuk memenuhi salah satu syarat kelulusan
Jenjang Diploma Tiga pada Progrm Studi Teknik Informatika
STMIK Mardira Indonesia. Aplikasi tentang pencarian toko pelanggan berbasis android ini akan membantu karyawan/supir untuk pengiriman barang
</string>
    <string name="register">Register</string>
    <string name="load">Loading</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tambah">Tambah</string>
    <string name="data_tidak_ada">Data Tidak Ada</string>
    <string name="admin">Admin</string>
    <string name="pengirim">Pengirim</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="login_admin">Login Admin</string>
    <string name="email">Email</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="tambah_pengirim">Tambah Pengirim</string>
    <string name="nama_pengirim">Nama Pengirim</string>
    <string name="alamat">Alamat</string>
    <string name="tambah_admin">Tambah Admin</string>
    <string name="nama_admin">Nama Admin</string>
    <string name="detail_pelanggan">Detail Pelanggan</string>


</resources>
