<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".admin.ui.pelanggan.PelangganFragment">

    <LinearLayout
        android:id="@+id/tp_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryText"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:text="@string/tambah_pelanggan"
            android:fontFamily="@font/calibri"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:ignore="ScrollViewSize">

            <com.agrawalsuneet.dotsloader.loaders.TashieLoader
                android:id="@+id/tp_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tashieloader_animDelay="50"
                app:tashieloader_animDur="250"
                app:tashieloader_dotsColor="@color/colorLoginPrimaryDark"
                app:tashieloader_dotsDist="5dp"
                app:tashieloader_dotsRadius="10dp"
                app:tashieloader_interpolator="@android:anim/accelerate_interpolator"
                app:tashieloader_noOfDots="6" />

            <ImageView
                android:id="@+id/tp_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/images"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tp_image">

                <EditText
                    android:id="@+id/et_nama_pelanggan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/nama_pelanggan"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/nama_pelanggan"
                    android:inputType="textImeMultiLine"
                    android:maxLines="3"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout0">

                <EditText
                    android:id="@+id/et_jam_istirahat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/jam_istirahat"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/jam_istirahat"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                <EditText
                    android:id="@+id/et_alamat_pemesan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/alamat_pemesan"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/alamat_pemesan"
                    android:inputType="textPostalAddress"
                    android:maxLines="4"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                <EditText
                    android:id="@+id/et_alamat_dikirim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/alamat_dikirim"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/alamat_dikirim"
                    android:inputType="text"
                    android:maxLines="4"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

                <EditText
                    android:id="@+id/et_telepon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/telepon"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/telepon"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/textLayout"
                android:theme="@style/EditScreenTextInputLayoutStyle"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

                <EditText
                    android:id="@+id/et_kordinat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="@string/alamat_pemesan"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/calibri"
                    android:hint="@string/kordinat"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="#070707"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout5">

                <Button
                    android:id="@+id/btn_tp_tambah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonshapewhitebg"
                    android:fontFamily="@font/calibri"
                    android:text="@string/tambah"
                    android:textAllCaps="false"
                    android:textColor="@color/mapboxWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


